--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-@Author <Name/Matricno>
-Date :
+@Author <YE JIAWEI/A0212246R>
+Date : 09/09/2020
 
 
 ################################################
