--- a/HW4/README
+++ b/HW4/README
@@ -1,3 +1,4 @@
+@Student <YE JIAWEI/A0212246R>
 1.	Usage
     a)	for each scenario, run PolicyX.py directly (./PolicyX.py), the Automonitor.py contains the function which will be called by PolicyX.py, no need to run it separately.
     b)	Note that each time to run a run policy, the floodlight and mininet need to be restarted since the deletion of alternative flows is not implemented.
